<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/addtrans"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color_1">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:src="@drawable/main_background"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="142dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/imageView3"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:background="@drawable/task_bar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">


        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:background="@drawable/circle"
            app:layout_constraintBottom_toBottomOf="@+id/AcptTransBtn"
            app:layout_constraintEnd_toEndOf="@+id/AcptTransBtn"
            app:layout_constraintStart_toStartOf="@+id/AcptTransBtn"
            app:layout_constraintTop_toTopOf="@+id/AcptTransBtn"
            app:layout_constraintVertical_bias="0.986" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/AcptTransBtn"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@drawable/done"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/ReturnHomeBtn"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/undo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.04"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.466" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/DeleteBtn"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/delete"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.951"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.366"
            android:visibility="gone"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/ChooseCategoryTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Category:"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf = "@id/ChooseCategoryBtn"
        app:layout_constraintBottom_toTopOf = "@id/ChooseCategoryBtn" />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ChooseCategoryBtn"
        android:layout_width="272dp"
        android:layout_height="67dp"
        android:background="@drawable/rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4" >

        <Button
            android:id="@+id/categoryBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"/>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/ChooseCategoryBtn"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.272" />

        <TextView
            android:id="@+id/categoryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="another"
            android:textSize="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/ChooseTimeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Date:"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf = "@id/ChooseTimeBtn"
        app:layout_constraintBottom_toTopOf = "@id/ChooseTimeBtn" />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ChooseTimeBtn"
        android:layout_width="272dp"
        android:layout_height="67dp"
        android:background="@drawable/rectangle"

        app:layout_constraintBottom_toTopOf="@id/EnterAmountBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ChooseCategoryBtn"
        >

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="4dp"
            android:background="@drawable/clock"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/ChooseTimeBtn"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.272" />

        <EditText
            android:id="@+id/edit_text_date"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="60dp"
            android:backgroundTint="@android:color/transparent"
            android:gravity="center"
            android:hint="DD/MM/YY"
            android:inputType="none"
            android:clickable="true"
            android:focusable="false"
            android:maxLines="1"
            android:textSize="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/ChooseTimeBtn"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>



    <TextView
        android:id="@+id/EnterAmountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Amount:"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf = "@id/EnterAmountBtn"
        app:layout_constraintBottom_toTopOf = "@id/EnterAmountBtn" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/EnterAmountBtn"
        android:layout_width="272dp"
        android:layout_height="67dp"
        android:background="@drawable/rectangle"

        app:layout_constraintBottom_toTopOf="@+id/NoteBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ChooseTimeBtn"
        >

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="4dp"
            android:background="@drawable/currency"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/EnterAmountBtn"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.272" />

        <EditText
            android:id="@+id/edit_text_amount"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="60dp"
            android:backgroundTint="@android:color/transparent"
            android:gravity="center"
            android:hint="0.000.000"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:textSize="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/EnterAmountBtn"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Note:"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf = "@id/NoteBtn"
        app:layout_constraintBottom_toTopOf="@+id/NoteBtn">

    </TextView>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/NoteBtn"
        android:layout_width="272dp"
        android:layout_height="67dp"
        android:background="@drawable/rectangle"

        app:layout_constraintBottom_toTopOf="@id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/EnterAmountBtn"
        >

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="4dp"
            android:background="@drawable/note"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/NoteBtn"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.272" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/note"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="60dp"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:gravity="center"
            android:hint="optional"
            android:maxLines="1"
            android:textSize="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/NoteBtn"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/categoryLayout"
        android:layout_width="0dp"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.85"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.65"
        android:layout_height="0dp"
        android:background="@drawable/category_list"
        android:orientation="vertical"
        android:visibility="gone"


        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/tab_background"
            app:tabIndicatorColor="@color/background_color_2"
            app:tabIndicatorHeight="4dp"
            app:tabMode="fixed"
            app:tabSelectedTextColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/categoryLayout"
            app:layout_constraintEnd_toEndOf="@+id/categoryLayout"
            app:layout_constraintStart_toStartOf="@+id/categoryLayout"
            app:layout_constraintTop_toBottomOf="@+id/closeBtn"
            app:layout_constraintVertical_bias="1">
            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabIncome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="income"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabExpense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="expense"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

        </com.google.android.material.tabs.TabLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/closeBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="bottom"
            android:layout_marginStart="10dp"
            android:background="@drawable/multiplication"


            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/CategoryList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintBottom_toTopOf="@+id/tabLayout"
            app:layout_constraintTop_toBottomOf="@id/closeBtn"
            app:layout_constraintHeight_percent="0.8"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>