...
                    android:id="@+id/note"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"

                    app:layout_constraintTop_toBottomOf="@+id/edit"
                    app:layout_constraintBottom_toTopOf="@+id/showBtn"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                </EditText>


...
